[package]
name = "pixelflut"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"

[dependencies]
rand = {version = "0.8", features = ["small_rng"]}
serde = {version = "1", features = ["derive"]}
image = "0.24"
ctrlc = "3"
toml = "0.5"
anyhow = "1"
tokio-uring = "0.3.0"
tokio = {version = "1", features = ["rt", "time", "sync", "parking_lot"]}
parking_lot = "0.12"
