[package]
name = "pixelflut"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"

[dependencies]
rand = {version = "0.8", features = ["small_rng"]}
serde = {version = "1", features = ["derive"]}
image = "0.24"
ctrlc = "3.4.4"
toml = "0.8"
anyhow = "1"
# https://github.com/tokio-rs/tokio-uring/pull/52 hasn't been release yet.
tokio-uring = {git = "https://github.com/tokio-rs/tokio-uring"}
tokio = {version = "1", features = ["rt", "time", "sync", "parking_lot"]}
parking_lot = "0.12"
